# sample-project-python

./: .pre-commit-config.yaml  ARCHITECTURE.md  BUG_FIX_DSLIST.md  BUG_FIX_SUMMARY.md  CHANGES.md  CODEOWNERS  CONTRIBUTING.md  DSLIST_BUG_FIX_SUMMARY.md  README.md  SECURITY.md  TEAM_ACCESS.md  USER_GUIDE.md  author.md  benchmark_is_prime_ineff.py  demonstrate_bug_fix.py  main.py  pyproject.toml  test_rotate_fix.py  verify_fix.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: access_request.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml
artemis_scripts/: README.md  benchmark.sh  build.sh  clean.sh  test.sh
data/: README.md
scripts/: bench_primes.py
src/llm_benchmark/: README.md  __init__.py  config.py  validation.py
src/llm_benchmark/algorithms/: README.md  __init__.py  primes.py  sort.py
src/llm_benchmark/control/: README.md  __init__.py  double.py  single.py
src/llm_benchmark/datastructures/: README.md  __init__.py  dslist.py
src/llm_benchmark/decisions/: database.py  schema.sql
src/llm_benchmark/generator/: README.md  gen_list.py
src/llm_benchmark/sql/: README.md  query.py
src/llm_benchmark/strings/: README.md
tests/: README.md
tests/llm_benchmark/: test_validation.py
tests/llm_benchmark/algorithms/: test_prime_factors_bugfix.py  test_primes.py  test_sort.py
tests/llm_benchmark/control/: test_count_duplicates_bug.py  test_double.py  test_single.py
tests/llm_benchmark/datastructures/: test_dslist.py  test_dslist_bug.py  test_dslist_class_bug.py
tests/llm_benchmark/generator/: test_gen_list.py
(+3 files in other folders)
