[tool.poetry]
name = "llm_benchmark"
version = "0.1.0"
description = "A collection of python functions to benchmark llm projects"
authors = ["Matthew <matthew.truscott@turintech.ai>"]
readme = "README.md"

[tool.poetry.scripts]
main = "main:main"

[tool.poetry.dependencies]
# NOTE: Python 3.8 is EOL. We keep compatibility for now; see SECURITY.md for migration plan.
python = "^3.8"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.1"
black = "^23.12.0"
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
bandit = "^1.7.6"
pip-audit = "^2.7.3"
pre-commit = "^3.7.0"

[tool.bandit]
targets = ["src"]
skips = ["B101"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


